// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render button with end icon 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-main);
  border-color: var(--pbl-theme-colors-brand-main);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-brand-dark);
  border-color: var(--pbl-theme-colors-brand-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-darkest);
  border-color: var(--pbl-theme-colors-brand-darkest);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  width: 20px;
  height: 20px;
}

.c2 > * {
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
    <div
      class="c2"
      data-testid="pbl-button-icon"
    >
      <div>
        myIcon
      </div>
    </div>
  </button>
</div>
`;

exports[`render button with start icon 1`] = `
.c2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-main);
  border-color: var(--pbl-theme-colors-brand-main);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-brand-dark);
  border-color: var(--pbl-theme-colors-brand-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-darkest);
  border-color: var(--pbl-theme-colors-brand-darkest);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
  width: 20px;
  height: 20px;
}

.c1 > * {
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <div
      class="c1"
      data-testid="pbl-button-icon"
    >
      <div>
        myIcon
      </div>
    </div>
    <span
      class="c2"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primary brand color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-main);
  border-color: var(--pbl-theme-colors-brand-main);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-brand-dark);
  border-color: var(--pbl-theme-colors-brand-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-darkest);
  border-color: var(--pbl-theme-colors-brand-darkest);
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primary negative color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-main);
  border-color: var(--pbl-theme-colors-negative-main);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-negative-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-negative-dark);
  border-color: var(--pbl-theme-colors-negative-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-darkest);
  border-color: var(--pbl-theme-colors-negative-darkest);
}

<div>
  <button
    class="c0"
    color="negative"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primary plain color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-50);
  border-color: var(--pbl-theme-colors-gray-100);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-gray-50);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-gray-100);
  border-color: var(--pbl-theme-colors-gray-200);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-200);
  border-color: var(--pbl-theme-colors-gray-300);
}

<div>
  <button
    class="c0"
    color="plain"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primary positive color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-main);
  border-color: var(--pbl-theme-colors-positive-main);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-positive-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-positive-dark);
  border-color: var(--pbl-theme-colors-positive-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-darkest);
  border-color: var(--pbl-theme-colors-positive-darkest);
}

<div>
  <button
    class="c0"
    color="positive"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primaryInverted brand color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-main);
  background: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-brand-lightest);
  border-color: var(--pbl-theme-colors-brand-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-main);
  background: var(--pbl-theme-colors-brand-light);
  border-color: var(--pbl-theme-colors-brand-light);
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primaryInverted negative color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-negative-main);
  background: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-negative-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-negative-lightest);
  border-color: var(--pbl-theme-colors-negative-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-negative-main);
  background: var(--pbl-theme-colors-negative-light);
  border-color: var(--pbl-theme-colors-negative-light);
}

<div>
  <button
    class="c0"
    color="negative"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primaryInverted plain color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-common-white);
  border-color: var(--pbl-theme-colors-common-white);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-gray-50);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-gray-50);
  border-color: var(--pbl-theme-colors-gray-50);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-100);
  border-color: var(--pbl-theme-colors-gray-100);
}

<div>
  <button
    class="c0"
    color="plain"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render primaryInverted positive color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-positive-main);
  background: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-positive-lightest);
}

.c0:hover:enabled {
  background: var(--pbl-theme-colors-positive-lightest);
  border-color: var(--pbl-theme-colors-positive-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-positive-main);
  background: var(--pbl-theme-colors-positive-light);
  border-color: var(--pbl-theme-colors-positive-light);
}

<div>
  <button
    class="c0"
    color="positive"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondary brand color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-dark);
  border-color: var(--pbl-theme-colors-brand-dark);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  border-color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  border-color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-light);
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondary negative color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-negative-dark);
  border-color: var(--pbl-theme-colors-negative-dark);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-negative-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  border-color: var(--pbl-theme-colors-negative-darkest);
  background: var(--pbl-theme-colors-negative-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  border-color: var(--pbl-theme-colors-negative-darkest);
  background: var(--pbl-theme-colors-negative-light);
}

<div>
  <button
    class="c0"
    color="negative"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondary plain color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-common-black);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-gray-50);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-50);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-100);
}

<div>
  <button
    class="c0"
    color="plain"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondary positive color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-positive-dark);
  border-color: var(--pbl-theme-colors-positive-dark);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-positive-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  border-color: var(--pbl-theme-colors-positive-darkest);
  background: var(--pbl-theme-colors-positive-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  border-color: var(--pbl-theme-colors-positive-darkest);
  background: var(--pbl-theme-colors-positive-light);
}

<div>
  <button
    class="c0"
    color="positive"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondaryInverted brand color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-darkest);
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondaryInverted negative color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-negative-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-darkest);
}

<div>
  <button
    class="c0"
    color="negative"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondaryInverted plain color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-common-white);
  border-color: var(--pbl-theme-colors-common-white);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-gray-50);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-common-white);
  border-color: var(--pbl-theme-colors-common-white);
  background: var(--pbl-theme-colors-gray-800);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-common-white);
  border-color: var(--pbl-theme-colors-common-white);
  background: var(--pbl-theme-colors-gray-600);
}

<div>
  <button
    class="c0"
    color="plain"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render secondaryInverted positive color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-positive-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-darkest);
}

<div>
  <button
    class="c0"
    color="positive"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render text brand color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-dark);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-brand-light);
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render text negative color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-negative-dark);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-negative-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  background: var(--pbl-theme-colors-negative-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-negative-light);
}

<div>
  <button
    class="c0"
    color="negative"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render text plain color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-common-black);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-gray-50);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-50);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: transparent;
  background: var(--pbl-theme-colors-gray-100);
}

<div>
  <button
    class="c0"
    color="plain"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render text positive color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-positive-dark);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-positive-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  background: var(--pbl-theme-colors-positive-lightest);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-positive-light);
}

<div>
  <button
    class="c0"
    color="positive"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render textInverted brand color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-brand-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-brand-darkest);
}

<div>
  <button
    class="c0"
    color="brand"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render textInverted negative color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-negative-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-negative-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-negative-darkest);
}

<div>
  <button
    class="c0"
    color="negative"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render textInverted plain color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-common-white);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-gray-50);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-common-white);
  background: var(--pbl-theme-colors-gray-800);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-common-white);
  border-color: transparent;
  background: var(--pbl-theme-colors-gray-600);
}

<div>
  <button
    class="c0"
    color="plain"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;

exports[`render textInverted positive color button 1`] = `
.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 10px 14px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--pbl-theme-colors-positive-contrastText);
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c0:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-positive-lightest);
}

.c0:hover:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-dark);
}

.c0:active:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-positive-darkest);
}

<div>
  <button
    class="c0"
    color="positive"
    data-testid="pbl-button"
  >
    <span
      class="c1"
    >
      Hello
    </span>
  </button>
</div>
`;
